--- a/frontend/src/app/components/history/history.component.html
+++ b/frontend/src/app/components/history/history.component.html
@@ -22,19 +22,27 @@
     <div>
         <h4>Orders (последние)</h4>
         <div *ngIf="loadingO">Загрузка...</div>
-        <table *ngIf="!loadingO">
+        <table *ngIf="!loadingO" class="tbl">
             <tr>
-                <th>ID</th><th>TS</th><th>Event</th><th>Symbol</th><th>Side</th><th>Type</th><th>Price</th><th>Qty</th><th>Status</th>
+                <th style="width:60px;">ID</th>
+                <th style="width:140px;">TS</th>
+                <th style="width:80px;">Event</th>
+                <th style="width:100px;">Symbol</th>
+                <th style="width:60px;">Side</th>
+                <th style="width:80px;">Type</th>
+                <th style="width:80px;">Price</th>
+                <th style="width:80px;">Qty</th>
+                <th style="width:80px;">Status</th>
             </tr>
             <tr *ngFor="let o of orders">
-                <td>{{o.id}}</td>
-                <td>{{o.ts*1000 | date:'medium'}}</td>
+                <td class="mono">{{o.id}}</td>
+                <td class="mono">{{o.ts*1000 | date:'medium'}}</td>
                 <td>{{o.event}}</td>
                 <td>{{o.symbol}}</td>
                 <td>{{o.side}}</td>
                 <td>{{o.type}}</td>
-                <td>{{o.price}}</td>
-                <td>{{o.qty}}</td>
+                <td class="mono">{{o.price}}</td>
+                <td class="mono">{{o.qty}}</td>
                 <td>{{o.status}}</td>
             </tr>
         </table>
@@ -43,19 +51,26 @@
     <div>
         <h4>Trades (последние)</h4>
         <div *ngIf="loadingT">Загрузка...</div>
-        <table *ngIf="!loadingT">
+        <table *ngIf="!loadingT" class="tbl">
             <tr>
-                <th>ID</th><th>TS</th><th>Type</th><th>Symbol</th><th>Side</th><th>Price</th><th>Qty</th><th>PNL</th>
+                <th style="width:60px;">ID</th>
+                <th style="width:140px;">TS</th>
+                <th style="width:80px;">Type</th>
+                <th style="width:100px;">Symbol</th>
+                <th style="width:60px;">Side</th>
+                <th style="width:80px;">Price</th>
+                <th style="width:80px;">Qty</th>
+                <th style="width:80px;">PNL</th>
             </tr>
             <tr *ngFor="let t of trades">
-                <td>{{t.id}}</td>
-                <td>{{t.ts*1000 | date:'medium'}}</td>
+                <td class="mono">{{t.id}}</td>
+                <td class="mono">{{t.ts*1000 | date:'medium'}}</td>
                 <td>{{t.type}}</td>
                 <td>{{t.symbol}}</td>
                 <td>{{t.side}}</td>
-                <td>{{t.price}}</td>
-                <td>{{t.qty}}</td>
-                <td>{{t.pnl}}</td>
+                <td class="mono">{{t.price}}</td>
+                <td class="mono">{{t.qty}}</td>
+                <td class="mono" [class.pnl-positive]="(t.pnl||0) > 0" [class.pnl-negative]="(t.pnl||0) < 0">{{t.pnl}}</td>
             </tr>
         </table>
     </div>
